<resources>
    <string name="app_name">mobileReservation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="End">End</string>
    <string name="Start">Start</string>
    <string name="Schedule">Schedule</string>
    <string name="facility">Facility</string>
    <string name="equipment">Equipment</string>
    <string name="submit">Submit</string>
    <string name="change_schedule">change schedule</string>

    <string name="menu_facilities">Facilities</string>
    <string name="menu_equipments">Equipment</string>
    <string name="menu_request">My Requests</string>
    <string name="menu_reservation">Request Reservation</string>
    <string name="menu_schedule">Schedules</string>
    <string name="menu_toReturn">To Return</string>
    <string name="menu_pending">Pending</string>

    <string name="action_registration">Register</string>
    <string name="action_login">login</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_id">ID #</string>
    <string name="action_logout">Logout</string>

    <string name="hello_blank_fragment">Registration</string>
    <string name="name">Name</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="identification">Identification</string>
    <string name="ID">ID #</string>
    <string name="register">register</string>
    <string name="password">Password</string>
    <string name="re_password">Re-password</string>
    <string name="registration">"Registration     "</string>
    <string name="purpose">Purpose for Reservation</string>
</resources>