<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_facility"
            android:icon="@drawable/ic_menu_room"
            android:title="@string/menu_facilities"/>
        <item
            android:id="@+id/nav_equipment"
            android:icon="@drawable/ic_menu_devices"
            android:title="@string/menu_equipments"/>
        <item
            android:id="@+id/nav_request"
            android:icon="@drawable/ic_menu_available"
            android:title="@string/menu_request"/>
        <item
            android:id="@+id/nav_reservation"
            android:icon="@drawable/ic_menu_book"
            android:title="@string/menu_reservation"/>
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_menu_event"
            android:title="@string/menu_schedule"/>
    </group>

</menu>