<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registration_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.registration.RegistrationFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="#2DB67C"
        app:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardTitleName"
                    android:layout_width="320dp"
                    android:layout_height="25dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginBottom="14dp"
                    android:background="#2DB67C"
                    app:cardCornerRadius="4dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/cardHeaderidentification"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="1dp"
                            android:layout_marginBottom="3dp"
                            android:text="@string/identification"
                            android:textSize="16sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.0" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="14dp"
                    android:background="#2DB67C"
                    app:cardCornerRadius="4dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true">

                        <EditText
                            android:id="@+id/registration_firstname"
                            android:layout_width="189dp"
                            android:layout_height="40dp"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentEnd="true"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="11dp"
                            android:layout_marginEnd="30dp"
                            android:layout_marginBottom="3dp" />

                        <TextView
                            android:id="@+id/firstname"
                            android:layout_width="wrap_content"
                            android:layout_height="41dp"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentTop="true"
                            android:layout_marginStart="24dp"
                            android:layout_marginTop="11dp"
                            android:gravity="center"
                            android:text="@string/firstname"
                            android:textSize="13sp" />

                        <EditText
                            android:id="@+id/registration_lastname"
                            android:layout_width="189dp"
                            android:layout_height="40dp"
                            android:layout_below="@+id/registration_firstname"
                            android:layout_alignParentEnd="true"
                            android:layout_marginStart="22dp"
                            android:layout_marginTop="18dp"
                            android:layout_marginEnd="31dp" />

                        <TextView
                            android:id="@+id/lastname"
                            android:layout_width="wrap_content"
                            android:layout_height="41dp"
                            android:layout_below="@+id/firstname"
                            android:layout_alignParentStart="true"
                            android:layout_marginStart="24dp"
                            android:layout_marginTop="18dp"
                            android:gravity="center"
                            android:text="@string/lastname"
                            android:textSize="13sp" />

                        <EditText
                            android:id="@+id/registration_number"
                            android:layout_width="189dp"
                            android:layout_height="40dp"
                            android:layout_below="@+id/registration_lastname"
                            android:layout_alignParentEnd="true"
                            android:layout_marginStart="22dp"
                            android:layout_marginTop="18dp"
                            android:layout_marginEnd="29dp"
                            android:layout_marginBottom="11dp" />

                        <TextView
                            android:id="@+id/number"
                            android:layout_width="wrap_content"
                            android:layout_height="41dp"
                            android:layout_below="@+id/lastname"
                            android:layout_alignParentStart="true"
                            android:layout_marginStart="24dp"
                            android:layout_marginTop="18dp"
                            android:layout_marginBottom="11dp"
                            android:gravity="center"
                            android:text="@string/ID"
                            android:textSize="13sp" />


                    </RelativeLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="#2DB67C"
        app:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardTitlePassword"
                    android:layout_width="320dp"
                    android:layout_height="25dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginBottom="14dp"
                    android:background="#2DB67C"
                    app:cardCornerRadius="4dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/cardHeaderPassword"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="1dp"
                            android:layout_marginBottom="3dp"
                            android:text="@string/password"
                            android:textSize="16sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.0" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="14dp"
                    android:background="#2DB67C"
                    app:cardCornerRadius="4dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true">

                        <EditText
                            android:id="@+id/registration_password"
                            android:layout_width="189dp"
                            android:layout_height="40dp"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentEnd="true"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="11dp"
                            android:layout_marginEnd="30dp"
                            android:layout_marginBottom="3dp" />

                        <TextView
                            android:id="@+id/password"
                            android:layout_width="wrap_content"
                            android:layout_height="41dp"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentTop="true"
                            android:layout_marginStart="24dp"
                            android:layout_marginTop="11dp"
                            android:gravity="center"
                            android:text="@string/password"
                            android:textSize="13sp" />

                        <EditText
                            android:id="@+id/registration_re_password"
                            android:layout_width="189dp"
                            android:layout_height="40dp"
                            android:layout_below="@+id/registration_password"
                            android:layout_alignParentEnd="true"
                            android:layout_marginStart="22dp"
                            android:layout_marginTop="18dp"
                            android:layout_marginEnd="31dp"
                            android:layout_marginBottom="11dp" />

                        <TextView
                            android:id="@+id/repassword"
                            android:layout_width="wrap_content"
                            android:layout_height="41dp"
                            android:layout_below="@+id/password"
                            android:layout_alignParentStart="true"
                            android:layout_marginStart="24dp"
                            android:layout_marginTop="18dp"
                            android:layout_marginBottom="11dp"
                            android:gravity="center"
                            android:text="@string/re_password"
                            android:textSize="13sp" />


                    </RelativeLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/reservation_change_schedule"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/register" />
</LinearLayout>